feat: add decapbridge and update title

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,24 @@
 backend:
   name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
+  repo: plesioo/SFW-Website
+  branch: master
+  identity_url: https://auth.decapbridge.com/sites/8cb8b33a-17dd-4625-8f2b-5dd7c28c7849
+  gateway_url: https://gateway.decapbridge.com
+
+  # Quickly see who did what (optional)
+  commit_messages:
+    create: Create {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}>
+    update: Update {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}>
+    delete: Delete {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}>
+    uploadMedia: Upload “{{path}}” - {{author-name}} <{{author-login}}>
+    deleteMedia: Delete “{{path}}” - {{author-name}} <{{author-login}}>
+    openAuthoring: Message {{message}} - {{author-name}} <{{author-login}}>
+
+# Better Decap + Bridge logo (optional)
+logo_url: https://decapbridge.com/decapcms-with-bridge.svg
+
+# Add site links in DecapCMS (optional)
+site_url: https://sfw-website.netlify.app
 media_folder: static/img
 public_folder: /img
 collections:
