--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,7 +28,7 @@ collections:
     label: "Blog"
     folder: "content/blog"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     i18n: true
     editor:
       preview: false
