--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,9 +24,60 @@ site_url: https://sfw-website.netlify.app
 media_folder: static/img
 public_folder: /img
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "content/blog"
+  - name: "course"
+    label: "Wahlkurse"
+    label_singular: "Wahlkurs"
+    folder: "content/course"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    preview_path: "course/{{slug}}"
+    fields:
+      - label: "Kursinformationen"
+        name: "courseInfo"
+        widget: "object"
+        fields:
+          - label: "Anrede Leitung"
+            name: "leadSalutation"
+            widget: "select"
+            options: ["Herr", "Frau"]
+
+          - { label: "Nachname Leitung", name: "leadName", widget: "string" }
+
+          - label: "Jahrgangsstufen"
+            name: "grades"
+            widget: "string"
+            hint: "z.B. 5-12"
+
+          - { label: "Raum", name: "room", widget: "string" }
+
+          - label: "Wochentage"
+            name: "weekdays"
+            widget: "select"
+            options: ["Montag", "Dienstag", "Mittwoch", "Donnerstag", "Freitag"]
+            multiple: true
+
+          - label: "Uhrzeit"
+            name: "time"
+            widget: "string"
+            hint: "z.B. 10:00-12:00"
+
+      - label: "Artikelinformationen"
+        name: "articleInfo"
+        widget: "object"
+        fields:
+          - { label: "Titel", name: "title", widget: "string" }
+          - label: "Veröffentlichungsdatum"
+            name: "date"
+            widget: "datetime"
+            date_format: "YYYY-MM-DD"
+            time_format: "HH:mm:ssZ"
+            default: "{{now}}"
+
+          - { label: "Bild", name: "image", widget: "image" }
+          - label: "Inhalt"
+            name: "body"
+            widget: "markdown"
+            modes: ["rich_text"]
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     i18n: true
