feat: allow only one program (supported on next decap version)

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -142,6 +142,7 @@ collections:
     label_singular: "SFW Programm"
     folder: "content/program"
     create: true
+    limit: 1
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     preview_path: "program/{{slug}}"
     fields:
