--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -138,23 +138,18 @@ collections:
         modes: ["rich_text"]
 
   - name: "program"
-    label: "SFW Programme"
+    label: "SFW Program"
     label_singular: "SFW Programm"
     folder: "content/program"
+    description: "Für Programmänderungen zum Schuljahr das aktuelle Programm mit dem neuen Bild aktualisieren."
     create: true
+    delete: false
     limit: 1
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     preview_path: "program/{{slug}}"
     fields:
       - { label: "Titel", name: "title", widget: "string" }
 
-      - label: "Veröffentlichungsdatum"
-        name: "date"
-        widget: "datetime"
-        date_format: "YYYY-MM-DD"
-        time_format: "HH:mm:ssZ"
-        default: "{{now}}"
-
-      - label: "Plakat"
-        name: "poster"
+      - label: "Bild des Programms"
+        name: "programmImg"
         widget: "image"
