feat: display program dynamically

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -151,5 +151,5 @@ collections:
       - { label: "Titel", name: "title", widget: "string" }
 
       - label: "Bild des Programms"
-        name: "programmImg"
+        name: "programImg"
         widget: "image"
