fix SFW-8: only render a limited article number

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = 'https://example.org/'
 languageCode = 'de'
 title = 'SFW'
 timeZone = 'Europe/Berlin'
+
+[params]
+    maxHomepageArticlesLimit = 8
