feat: comment out sfw-day section

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -151,31 +151,31 @@ collections:
         widget: "markdown"
         modes: ["rich_text"]
 
-  - name: "sfwDay"
-    label: "SFW Tage"
-    label_singular: "SFW Tag Artikel"
-    folder: "content/sfwDay"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    preview_path: "sfwDay/{{slug}}"
-    fields:
-      - { label: "Titel", name: "title", widget: "string" }
+  # - name: "sfwDay"
+  #   label: "SFW Tage"
+  #   label_singular: "SFW Tag Artikel"
+  #   folder: "content/sfwDay"
+  #   create: true
+  #   slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+  #   preview_path: "sfwDay/{{slug}}"
+  #   fields:
+  #     - { label: "Titel", name: "title", widget: "string" }
 
-      - label: "Veröffentlichungsdatum"
-        name: "date"
-        widget: "datetime"
-        date_format: "YYYY-MM-DD"
-        time_format: "HH:mm:ssZ"
-        default: "{{now}}"
+  #     - label: "Veröffentlichungsdatum"
+  #       name: "date"
+  #       widget: "datetime"
+  #       date_format: "YYYY-MM-DD"
+  #       time_format: "HH:mm:ssZ"
+  #       default: "{{now}}"
 
-      - label: "Bild"
-        name: "image"
-        widget: "image"
+  #     - label: "Bild"
+  #       name: "image"
+  #       widget: "image"
 
-      - label: "Artikelinhalt"
-        name: "body"
-        widget: "markdown"
-        modes: ["rich_text"]
+  #     - label: "Artikelinhalt"
+  #       name: "body"
+  #       widget: "markdown"
+  #       modes: ["rich_text"]
 
   - name: "program"
     label: "SFW Program"
